apps/base/servarr/cnpg.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnpg-db
  namespace: app-servarr
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: cnpg
  type: ClusterIP
