apps/base/servarr/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flood
  namespace: app-servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`flood.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
        - name: flood-themepark
          namespace: app-servarr
        - name: flood-strip-csp
          namespace: app-servarr
      services:
        - name: rtorrent-flood-web
          namespace: app-servarr
          port: http
  tls:
    secretName: traefik-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: app-servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`sonarr.cluster.arpa`) && PathPrefix(`/api/`)
      kind: Rule
      priority: 10
      services:
        - name: sonarr
          namespace: app-servarr
          port: http
    - match: Host(`sonarr.cluster.arpa`)
      kind: Rule
      priority: 1
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
        - name: sonarr-themepark
          namespace: app-servarr
      services:
        - name: sonarr
          namespace: app-servarr
          port: http
  tls:
    secretName: traefik-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: app-servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`prowlarr.cluster.arpa`) && PathPrefix(`/api/`)
      kind: Rule
      priority: 10
      services:
        - name: prowlarr
          namespace: app-servarr
          port: http
    - match: Host(`prowlarr.cluster.arpa`)
      kind: Rule
      priority: 1
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
        - name: prowlarr-themepark
          namespace: app-servarr
      services:
        - name: prowlarr
          namespace: app-servarr
          port: http
  tls:
    secretName: traefik-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: app-servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`radarr.cluster.arpa`) && PathPrefix(`/api/`)
      kind: Rule
      priority: 10
      services:
        - name: radarr
          namespace: app-servarr
          port: http
    - match: Host(`radarr.cluster.arpa`)
      kind: Rule
      priority: 1
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
        - name: radarr-themepark
          namespace: app-servarr
      services:
        - name: radarr
          namespace: app-servarr
          port: http
  tls:
    secretName: traefik-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: posterizarr
  namespace: app-servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`posterizarr.cluster.arpa`) && PathPrefix(`/api/`)
      kind: Rule
      priority: 10
      services:
        - name: posterizarr
          namespace: app-servarr
          port: http
    - match: Host(`posterizarr.cluster.arpa`)
      kind: Rule
      priority: 1
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
      services:
        - name: posterizarr
          namespace: app-servarr
          port: http
  tls:
    secretName: traefik-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: app-servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`bazarr.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
        - name: bazarr-themepark
          namespace: app-servarr
      services:
        - name: bazarr
          namespace: app-servarr
          port: http
  tls:
    secretName: traefik-tls
